[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwilson-cache-client"
version = "0.1.1"
description = "Unified Python client for the dwilson scrape-stack cache services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "blake3>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[tool.setuptools]
packages = ["cache_client"]
